Fri Aug  3 13:49:08 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Fixed a bug where adding to a mapped keyword as a scoped template
          variable would wipe out the original setting instead of adding to
          it.

Fri Aug  3 11:53:48 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * config/global.mpb:
        * config/mpb.mpb:

          Removed the MPB Define_Custom out of global and into it's own base
          project.  Users can have their base projects inherit from mpb if
          they want to use it.

Tue Jul 31 13:57:54 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * docs/README:

          Fixed a few instances where mpd was mistakenly used in place of mpt.

Mon Jul 30 13:47:13 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * config/global.mpb:

          Added a define custom to allow users to explicitly list .mpb files
          in their projects.

        * prj_install.pl:

          By default, install all .mpb files.

Mon Jul 30 11:33:43 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Support setting a mapped custom defined keyword as a scoped
          template variable.

Wed Jul 11 14:52:02 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * templates/nmake.mpd:
        * templates/nmakedll.mpt:
        * templates/nmakeexe.mpt:

          Moved the default libraries advapi32.lib and user32.lib out of the
          template and into the template-input files using the variable name
          systemlibs.  This allows -value_template systemlibs+=FOO to work.

Fri Jun 29 18:24:22 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * modules/Depgen/Driver.pm:

          Removed assigment of () to %types since it was sometimes
          clobbering the value already there (from the BEGIN block).

        * modules/Depgen/NMakeObjectGenerator.pm:
        * depgen.pl:
