@@ -1,3 +1,10 @@
+Wed Aug  8 12:29:46 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/AutomakeWorkspaceCreator.pm:
+
+          Added a code to handle a special associate key to support
+          conditional substitutions in the SUBDIRS setting.
+
 Fri Aug  3 13:49:08 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/ProjectCreator.pm:
